--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@ body {
     justify-content: center;
     height: 100vh;
     align-items: center;
-    font-size: 32px;
 }
 .calculator {
     width: 200px;
@@ -12,8 +11,8 @@ body {
     gap: 5px;
 }
 .display {
+    font-size: 2em;
     grid-column: 1 / 4;
-    grid-row: 1;
     text-align: right;
 }
 button {
